--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
 }
 button {
   color: white;
-  background-color: rgb(5, 134, 255);
+  background-color: #3882f6;
   font-size: 20px;
   padding: 5px 12px;
   border-radius: 8px;
@@ -76,4 +76,46 @@ button {
   font-size: 38px;
   font-weight: extrabold;
   text-align: center;
+  position: relative;
+  top: 30px;
+}
+.four-box {
+  display: flex;
+  height: 90%;
+  justify-content: center;
+  align-items: center;
+}
+.four-box > div {
+  text-align: center;
+  width: 18%;
+  color: #71757c;
+}
+.four-box > div .blue-box {
+  padding: 50px;
+  border: 2px solid #3882f6;
+  height: 50px;
+  border-radius: 12px;
+  width: 18%;
+  margin: 0 auto;
+}
+.section-three {
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 36px;
+  font-family: italic;
+  color: #1f2937;
+  background-color: #e5e7eb;
+}
+.quote-text {
+  /*width: 75%;
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 36px;
+  font-family: italic;
+  color: #1f2937;*/
 }
