--- a/style.css
+++ b/style.css
@@ -28,13 +28,15 @@ h1 {
   font-weight: extrabold;
   color: #f9faf8;
 }
-button {
+.first-button {
   color: white;
   background-color: #3882f6;
   font-size: 20px;
   padding: 5px 12px;
   border-radius: 8px;
   border: none;
+  position: relative;
+  top: 20px;
 }
 .main-container {
   margin: 0 auto;
@@ -104,18 +106,62 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: 36px;
-  font-family: italic;
-  color: #1f2937;
   background-color: #e5e7eb;
 }
-.quote-text {
-  /*width: 75%;
+.quote {
+  width: 75%;
   height: 25vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 36px;
-  font-family: italic;
-  color: #1f2937;*/
+  font-style: italic;
+  font-weight: 200;
+  color: #1f2937;
+}
+.thor {
+  position: relative;
+  left: 300px;
+  bottom: 35px;
+  font-size: 26px;
+  color: #1f2937;
+  font-weight: bold;
+}
+.section-four {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  background-color: whitesmoke;
+}
+.inner-container {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #3882f6;
+  width: 75%;
+  padding: 35px;
+  border-radius: 10px;
+  color: white;
+}
+.sign-up-button {
+  color: white;
+  background-color: #3882f6;
+  font-size: 20px;
+  padding: 5px 12px;
+  border-radius: 8px;
+  border: 2px solid white;
+  width: 150px;
+}
+.sign-up-button:hover {
+  color: black;
+}
+.section-five {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15vh;
+  background-color: #1f2937;
+}
+footer {
+  color: white;
 }
